add some performance improvements for graph creation.