@@ -23,6 +23,7 @@ object Settings extends Version {
       "-verbose:gc",
       "-XX:+PrintGCDetails",
       "-XX:+PrintGCTimeStamps",
+      "-XX:+PrintGCDateStamps",
       "-Xloggc:./gc.log",
       "-XX:+HeapDumpOnOutOfMemoryError",
       "-XX:HeapDumpPath=./dumps/heap-dump.hprof",
